SIXTH-142: QA fix - Fixed minicart position on mobile

--- a/src/component/HeaderMainSection/HeaderMainSection.style.scss
+++ b/src/component/HeaderMainSection/HeaderMainSection.style.scss
@@ -41,7 +41,7 @@ main {
             font-size: 12px;
             padding-left: 15px;
             padding-right: 15px;
-            top: 5px;
+            top: 0;
             width: 70%;
             margin-left: 15%;
             height: 40px;
@@ -69,7 +69,7 @@ main {
         background: $white;
 
         &-Button {
-            top: 4px;
+            top: 0;
             left: 5px;
             background-size: 30px;
             width: 30px;
@@ -115,8 +115,8 @@ main {
 
             @include mobile {
                 position: fixed;
-                top: 15px;
-                right: 15px;
+                top: 7px;
+                right: 20px;
 
                 background: $white;
                 height: 40px;
